<resources>
    <string name="app_name">VokaMoka</string>
    <string name="permission_guide">Allow the necessary permissions to use the app.</string>
    <string name="txt_guide_modify_permission"><![CDATA[Please change the settings in Application Information > Permissions.]]></string>
    <string name="app_play_store_url">https://play.google.com/store/apps/details?id=kr.co.devicechecker</string>
    <string name="msg_invalid_vending">fail to move google play store</string>
    <string name="tv_word_guide_message">클릭하여 단어 확인 하기</string>
    <string name="btn_check">Check</string>
    <string name="tv_beginner">초심자를 위한 Voca Moka 핵심 가이드!</string>
    <string name="tv_goto_voca">단어 학습 하러 가기</string>
    <string name="tv_tag_goto_voca">MAIN</string>
    <string name="tv_goto_stat">나의 통계</string>
    <string name="tv_goto_rank">Voca 랭킹</string>
    <string name="tv_goto_regist">단어 편집</string>
    <string name="ti_edit_camera">Camera</string>
    <string name="ti_edit_manual">Edit Word</string>
    <string name="btn_save_word">단어 저장하기</string>
    <string name="btn_load_data">불러오기</string>
    <string name="btn_reset_data">초기화</string>
    <string name="hint_plain_text_editor">아래와 같은 형식으로 입력\n\nApple / 사과 / 명사\nBanana / 바나나 / n. \nComprehensive / 포괄적인, 종합적인, 능력별 구분을 않는 / 형용사</string>
    <string name="btn_shuffle">단어 섞기</string>
    <string name="btn_goto_first">맨 앞으로 이동</string>
    <string name="tv_load_voca_guide">원하시는 메뉴를 선택해주세요.</string>
    <string name="tv_camera_edit_guide">카메라 촬영을 통해 데이터를 불러옵니다.</string>
    <string name="btn_load_image_close">취소</string>
    <string name="btn_load_image_save">저장하기</string>
    <string name="tv_welcome">환영합니다!\n사용하실 닉네임을 입력해주세요.</string>
    <string name="hint_user_nickname">eg. VokaMoka</string>
    <string name="btn_voka_start">시작하기</string>
    <string name="msg_greet1">%1$s 님\n오늘도 단어 암기를 시작해 볼까요?</string>
    <string name="msg_greet2">오늘 하루 %1$d 명의 Moka들이 단어 암기에 함께했어요!</string>
    <string name="msg_greet3">지금까지 %1$d 회 학습 하셨네요!</string>
    <string name="msg_complete_word">단어 등록 완료.</string>

    <!-- 사용자 권한 -->
    <array name="arr_user_permission">
        <item>Storage</item>
    </array>

    <array name="arr_user_permission_desc">
        <item>Allow the app to access external storage.</item>
    </array>

    <array name="icon_user_permissions">
        <item>@drawable/ic_folder</item>
    </array>

    <string-array name="arr_setting_option">
        <item>Language</item>
        <item>App Version</item>
        <item>Open Source License</item>
    </string-array>


    <!-- Voca Load Fragment Menu -->
    <string-array name="arr_menu_voca_load">
        <item>빠른 시작하기</item>
        <item>파일 불러오기</item>
        <item>데이터베이스 불러오기</item>
    </string-array>

    <string-array name="arr_menu_edit_word">
        <item>단어 입력하기(Editor)</item>
        <item>단어 입력하기(Camera)</item>
        <item>파일 불러오기</item>
        <item>암기 일정 편집</item>
        <item>단어 목록 편집"</item>
    </string-array>


</resources>