<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="vm"
            type="com.aiden.vokamoka.ui.viewmodel.PlainTextViewModel"
            />
        <variable
            name="click"
            type="com.aiden.vokamoka.base.listener.ViewClickListener"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_plan_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_top_menu"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_load_data"
                style="@style/baseTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/btn_load_data"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_reset_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                style="@style/baseTextStyle"
                android:textSize="16sp"
                android:textColor="@color/red_400"
                android:text="@string/btn_reset_data"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@color/mono100"
            app:layout_constraintTop_toBottomOf="@id/cl_top_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_top_menu"
            app:layout_constraintBottom_toTopOf="@id/btn_save_word"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_plain_text_editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textNoSuggestions"
                android:gravity="top|start"
                android:fontFamily="monospace"
                android:background="@android:color/transparent"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:hint="@string/hint_plain_text_editor"
                />
        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/blue_500"
            style="@style/baseTextStyle"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/btn_save_word"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>