<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="vm"
            type="com.aiden.vokamoka.ui.viewmodel.WelcomeViewModel"
            />
        <variable
            name="click"
            type="com.aiden.vokamoka.base.listener.ViewClickListener"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_welcome_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_percent="0.5"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/baseTextStyle"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="24sp"
            android:text="@string/tv_welcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/et_user_nickname"
            android:layout_marginBottom="16dp"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_user_nickname"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="@id/tv_welcome"
            app:layout_constraintEnd_toEndOf="@id/tv_welcome"
            app:layout_constraintTop_toTopOf="@id/gl_horizontal"
            app:layout_constraintBottom_toBottomOf="@id/gl_horizontal"
            style="@style/lightTextStyle"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textColorHint="@color/mono300"
            android:hint="@string/hint_user_nickname"
            android:textAlignment="center"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_voka_start"
            android:layout_width="0dp"
            android:layout_height="64dp"
            app:layout_constraintTop_toBottomOf="@id/et_user_nickname"
            app:layout_constraintStart_toStartOf="@id/et_user_nickname"
            app:layout_constraintEnd_toEndOf="@id/et_user_nickname"
            android:layout_marginTop="16dp"
            style="@style/baseTextStyle"
            android:text="@string/btn_voka_start"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:backgroundTint="@{vm.isNickNameValid ? @color/blue_500 : @color/mono300 }"
            tools:backgroundTint="@color/blue_500"
            android:onClick="@{(v)->click.onViewClick(v)}"
            android:enabled="@{vm.isNickNameValid}"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>