<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    >
    <data>
        <import type="android.view.View" />
        <variable
            name="vm"
            type="com.aiden.vokamoka.ui.viewmodel.CameraEditViewModel"
            />
        <variable
            name="click"
            type="com.aiden.vokamoka.base.listener.ViewClickListener"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_camera_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:paddingVertical="24dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_camera_edit_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/baseTextStyle"
            android:textSize="20sp"
            android:text="@string/tv_camera_edit_guide"
            />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_camera_pop_up"
            android:layout_width="156dp"
            android:layout_height="156dp"
            app:cardBackgroundColor="@color/blue_500"
            app:cardCornerRadius="4dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/mono300"
            android:elevation="2dp"
            android:shadowColor="@color/mono500"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{(v)->click.onViewClick(v)}"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="24dp"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_camera_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_camera_w"
                    android:scaleType="fitCenter"
                    >
                </androidx.appcompat.widget.AppCompatImageView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_photo_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{vm.isImgReady() ? View.VISIBLE : View.GONE}"
            android:background="@color/white"
            tools:visibility="visible"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_captured_image"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btn_load_image_save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="16dp"
                tools:src="@drawable/ic_translate_b"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_load_image_close"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:backgroundTint="@color/mono100"
                style="@style/baseTextStyle"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/btn_load_image_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_load_image_save"
                app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="@{(v)->click.onViewClick(v)}"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_load_image_save"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:backgroundTint="@color/blue_300"
                style="@style/baseTextStyle"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/btn_load_image_save"
                app:layout_constraintStart_toEndOf="@id/btn_load_image_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="@{(v)->click.onViewClick(v)}"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>